Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42696

Broken resource cleanup in QOpenGLWidget

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.4.1
    • 5.4.0
    • GUI: OpenGL
    • None
    • Win 8.1, Surface Pro 3, -opengl dynamic with forced ANGLE

    Description

      Run the qopenglwidget example and open more than one QOpenGLWidget by pressing the button. Close the app. With desktop GL there is no warnings shown. With ANGLE however QOpenGLFramebufferObject warns about incomplete attachments N-1 times where N is the number of QOpenGLWidgets.

      Update: Also reproduces on Win 7, with ANGLE only. Desktop GL shows no warnings.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes